@@ -662,7 +662,7 @@ AC_CONFIG_FILES([Makefile include/Makefile
 	tools/catalog/Makefile tools/process/Makefile tools/process/process.xml
 	tools/focus/Makefile tools/utils/Makefile
 	drivers/Makefile drivers/mock1/Makefile drivers/mock2/Makefile
-	drivers/simulator/Makefile drivers/net/Makefile
+	drivers/simulator/Makefile 
 	drivers/sx/Makefile drivers/sx/80-sx.rules
 	drivers/sbig/Makefile drivers/othello/Makefile
 	drivers/uvc/Makefile drivers/unicap/Makefile 
