@@ -1,6 +1,7 @@
 ChangeLog for the Astro project.
 
 20200820:
+	* add great circle path for simulated mount
 	* portability fix in snowfocuser
 	* add snowfocuser client program
 	* complete callback implementation in FocuserI.cpp
